--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -11,12 +11,12 @@ if(BUILD_TESTING)
 add_executable(test_fang test_fang.f90)
 target_link_libraries(test_fang PRIVATE fang fang_run assert const msis::msis_ifc)
 
-add_test(NAME unit:fangIonize COMMAND $<TARGET_FILE:test_fang>)
+add_test(NAME unit:fangIonize COMMAND test_fang)
 set_tests_properties(unit:fangIonize PROPERTIES
 TIMEOUT 10
 LABELS unit
 )
-dll_test_path("h5fortran::h5fortran;ZLIB::ZLIB;LAPACK::LAPACK" unit:fangIonize)
+dll_test_path(msis::msis_ifc unit:fangIonize)
 
 if(python)
   add_test(NAME unit:fangIonize:python
