--- a/.github/workflows/ci_oldest.yml
+++ b/.github/workflows/ci_oldest.yml
@@ -64,18 +64,18 @@ jobs:
     - name: Install CMake 3.20
       timeout-minutes: 2
       run: |
-        cmake -Dversion=${cmake_version} -P $GITHUB_WORKSPACE/gemext/scripts/install_cmake.cmake
-        echo "${HOME}/cmake-${cmake_version}-linux-x86_64/bin" >> $GITHUB_PATH
+        cmake -Dversion=${{ env.cmake_version }} -Dprefix=${{ runner.temp }} -P ${{ github.workspace }}/gemext/scripts/install_cmake.cmake
+        echo "${{ runner.temp }}/cmake-${{ env.cmake_version }}-linux-x86_64/bin" >> $GITHUB_PATH
 
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dfind:BOOL=true -Dmsis2:BOOL=${{ matrix.msis2 }} -DCMAKE_INSTALL_PREFIX=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow hwm14 msis mumps
-        cmake --install $GITHUB_WORKSPACE/gemext/build
+        cmake -Sgemext -Bgemext/build -Dfind:BOOL=true -Dmsis2:BOOL=${{ matrix.msis2 }} -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
+        cmake --build gemext/build --target ffilesystem glow hwm14 msis mumps
+        cmake --install gemext/build
 
     - name: Configure release
-      run: cmake -B build -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs -Dmsis2:BOOL=${{ matrix.msis2 }} -Dhwm14:BOOL=${{ matrix.hwm14 }}
+      run: cmake -B build -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }} -Dmsis2:BOOL=${{ matrix.msis2 }} -Dhwm14:BOOL=${{ matrix.hwm14 }}
 
     - name: Release build
       run: cmake --build build
