--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -29,9 +29,6 @@ jobs:
       with:
         update: true
         install: >-
-          git
-          patch
-          mingw-w64-x86_64-cmake
           mingw-w64-x86_64-ninja
           mingw-w64-x86_64-gcc-fortran
           mingw-w64-x86_64-hdf5
@@ -46,18 +43,17 @@ jobs:
         path: gemext
 
     - name: Put MSYS2_MinGW64 on PATH
-      # this is because GNU Patch doesn't work from MSYS2 shell
       run: echo "D:/a/_temp/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S gemext -B gemext/build -Dfind:BOOL=true -Dusempi:BOOL=no "-DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/.."
+        cmake -S gemext -B gemext/build -Dfind:BOOL=true -Dusempi:BOOL=no -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
         cmake --build gemext/build --target ffilesystem glow msis mumps mpi_scalapack_stub
         cmake --install gemext/build
 
     - name: Configure multi
-      run: cmake -Dmpi=no --preset multi "-DCMAKE_PREFIX_PATH:PATH=${{ github.workspace }}/.."
+      run: cmake -Dmpi=no --preset multi -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }}
 
 
     - name: Debug build
