--- a/.github/workflows/intel-oneapi.yml
+++ b/.github/workflows/intel-oneapi.yml
@@ -80,12 +80,12 @@ jobs:
     - name: Install numeric libraries
       timeout-minutes: 8
       run: |
-        cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build -Dfind:BOOL=true --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target ffilesystem glow hwm14 msis mumps
-        cmake --install $GITHUB_WORKSPACE/gemext/build
+        cmake -S gemext -B gemext/build -Dfind:BOOL=true -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
+        cmake --build gemext/build --target ffilesystem glow hwm14 msis mumps
+        cmake --install gemext/build
 
     - name: CMake Configure Ninja Multi-config
-      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs || cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${HOME}/gemlibs --debug-find
+      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }} || cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }} --debug-find
 
     - name: DEBUG build
       run: cmake --build --preset debug
