--- a/.github/workflows/ci_oldest.yml
+++ b/.github/workflows/ci_oldest.yml
@@ -55,7 +55,7 @@ jobs:
       timeout-minutes: 3
       run: |
         sudo apt update -yq
-        sudo $(cmake -P scripts/requirements.cmake)
+        sudo $(cmake -P gemext/scripts/requirements.cmake)
         sudo apt install libscalapack-mpi-dev
 
     - name: install Ninja + GCC 8 (ABI compatible with GCC 9 system libs)
@@ -64,7 +64,7 @@ jobs:
     - name: Install CMake 3.20
       timeout-minutes: 2
       run: |
-        cmake -Dversion=${{ env.cmake_version }} -Dprefix=${{ runner.temp }} -P ${{ github.workspace }}/gemext/scripts/install_cmake.cmake
+        cmake -Dversion=${{ env.cmake_version }} -Dprefix=${{ runner.temp }} -P gemext/scripts/install_cmake.cmake
         echo "${{ runner.temp }}/cmake-${{ env.cmake_version }}-linux-x86_64/bin" >> $GITHUB_PATH
 
     - name: Install numeric libraries
