--- a/.github/workflows/intel-oneapi.yml
+++ b/.github/workflows/intel-oneapi.yml
@@ -76,7 +76,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S gemext -B gemext/build -Dfind:BOOL=true -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
-        cmake --build gemext/build --target ffilesystem glow hwm14 msis mumps
+        cmake --build gemext/build --target ffilesystem glow hwm14 iniparser msis mumps
         cmake --install gemext/build
 
     - uses: actions/setup-python@v2
