hwm14: install dummy package if not used
if this is not done, the actual HWM14 package can unexpectedly override,
causing simulation runs to fail.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,9 @@ if(glow)
   find_package(glow CONFIG REQUIRED)
 endif(glow)
 
+# --- HWM14
+include(cmake/ext_libs/hwm14.cmake)
+
 include(cmake/compilers/flags.cmake)
 
 # unit test DLL paths
